--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body onload="fetchList()">
 
     <div class="container">
       <div class="header clearfix">
