--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
 
-    <title>ToDo</title>
+    <title>Worklist</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 
     <div class="container">
       <div class="header clearfix">
-        <h3 class="text-muted">Browser ToDo</h3>
+        <h3 class="text-muted">Worklist</h3>
       </div>
 
       <div class="jumbotron">
