--- a/index.html
+++ b/index.html
@@ -1,49 +1,34 @@
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+<html>
+<head>
+<title> Worklist </title>
 
-    <title>Worklist</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+   <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-  </head>
+</head>
 
-  <body onload="fetchList()">
-
-    <div class="container">
-      <div class="header clearfix">
-        <h3 class="text-muted">Worklist</h3>
-      </div>
-
-      <div class="jumbotron">
-        <form id="todoform">
-                      <h2> Add to list </h2>
-            <div class="form-group">
-
-            <input type="text" id="todotext" placeholder="Enter new" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary">Add</button>
-        </form>
-      </div>
-
-      <div class="row marketing">
-        <div class="col-lg-12">
-          <div id="todolist"></div>
-        </div>
-
-      <footer class="footer">
-        <p>&copy; Raj Kamdar.</p>
-      </footer>
-
-    </div> <!-- /container -->
+<body id="indexBody">
+  <div class="container">
+    <div class="jumbotron indexjumbo"> 
+      <h1 class="text-muted">Worklist</h2>
+      <button type="submit" class="btn btn-primary" onclick="signIn()">Google Sign-In</button>
+    </div>
+  </div>
   
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDNqmk_OPbKQMkvgkSf9vi0O42_WRFsRcY",
+    authDomain: "worklist-97bae.firebaseapp.com",
+    databaseURL: "https://worklist-97bae.firebaseio.com",
+    storageBucket: "worklist-97bae.appspot.com",
+    messagingSenderId: "292353917733"
+  };
+  firebase.initializeApp(config);
+</script>
+     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-  </body>
+</body>
+
 </html>
